[package]
name = "pir-of-ens"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "=1.44.0", features = ["full"] }
chalamet_pir = "=0.3.0"
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.140"
rand = "=0.9.0"
rand_chacha = "=0.9.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
